--- a/Spring ORM demos/orminboot/pom.xml
+++ b/Spring ORM demos/orminboot/pom.xml
@@ -54,6 +54,12 @@
             <artifactId>tomcat-jasper</artifactId>
             <version>9.0.33</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.10.3</version>
+        </dependency>
 
 
     </dependencies>
